[package]
name = "rust-learning-record"
version = "0.1.0"
authors = ["kumatata <chinagxwei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
rand = "0.8.0"
rmp-serde = "0.15.4"
async-trait = "0.1.50"
regex = "1.5.4"
base64 = "0.13.0"
sha-1 = "0.9.7"
